Ajustes finales de ips

--- a/server/core/upload.html
+++ b/server/core/upload.html
@@ -1,4 +1,4 @@
-<form action="http://localhost:8080/image/attached" method="post" enctype="multipart/form-data">
+<form action="http://whatshappening.no-ip.org/image/attached" method="post" enctype="multipart/form-data">
     <label for="image">Filename:</label>
     <input type="file" name="image" id="image" />
     <br />
