--- a/slides/What's Happening.html
+++ b/slides/What's Happening.html
@@ -1049,8 +1049,15 @@ final XXXResource resource = new XXXResource(param1, param2);
 <section class="content" id="ID_944183479">
 <h2>What next?</h2>
 <ul>
+<li></li>
+<li>
+<a href="http://whatshappening.no-ip.org/list" class="link external">http://whatshappening.no-ip.org/list</a>
+</li>
 <li>Se admiten fork pero se prefieren para pull request ;)</li>
 </ul>
+<div class="illustrations w1">
+<a href="whatshappening.png" class="image" title=""><img src="whatshappening.png" alt=""></a>
+</div>
 </section>
 <!--new subsection-->
 <section>
